Big c# refactoring - added web.api.core stuff
